Revision history for Perl module URI::Title

1.90 2014-12-?? Philippe Bruhat (BooK) <book@cpan.org>
  - Added separate COPYRIGHT AND LICENSE section to pod
  - Specified min version of perl as 5.006
  - Misc tidy-ups in Makefile.PL

1.89 2014-09-12 Philippe Bruhat (BooK) <book@cpan.org>
  - Closed RT #55235 (thanks to James Green (JKG))

1.88 2014-02-04 Philippe Bruhat (BooK) <book@cpan.org>
  - Closed RT #41361 (thanks to Kevin Ryde (KRYDE))

1.87 2014-02-04 Philippe Bruhat (BooK) <book@cpan.org>
  - New maintainer: BOOK
  - Added github repo to metadata
  - Added license details to metadata
  - Closed RT #82054 (thanks to Jotam Jr. Trejo)
  - Closed RT #92091 (thanks to Zakariyya Mughal (ZMUGHAL))
  - Fixed POD syntax
  - Added some POD tests
  - Fixed broken tests

1.86 2012-05-26 Tom Insam <tom@movieos.org>
  - Twitter suport fixed for non-javascript anchor links (yay)

1.85 2011-06-02 Tom Insam <tom@movieos.org>
  - Twitter suport fixed for javascript anchor links (ugh)

1.84 2009-07-27 Tom Insam <tom@jerakeen.org>
  - Spotify titling support from https://rt.cpan.org/Public/Bug/Display.html?id=48231

1.83 2008-10-18 Paul Mison <cpan@husk.org>
  - Work around a change in Twitter HTML

1.82 2008-09-30 Tom Insam <tom@jerakeen.org>
  - Latest LWP-UserAgent is pickier about what you pass it as a URI - fixed.

1.81 2008-06-19 Tom Insam <tom@jerakeen.org>
  - fix changes for the Register title
  - clearer licensing

1.80 2008-06-19 Tom Insam <tom@jerakeen.org>
  - Twitter support
  - Google calculator support
  - Too many irritating corner-case bugfixes to list.
  - Claim that we don't do gzip in some cases, to avoid evil

1.70 2008-04-21 Tom Insam <tom@jerakeen.org>
  - Added special case for Helsingin Sanomat URLs.
  - Supressed warnings if imgsize can't get an image size (from Dagfinn Ilmari Mannsaker)
  - Fixed some more nagging unicode issues. Bah, unicode.